--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
     "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3"
+    "eslint-config-next": "12.2.3",
+    "sass": "^1.54.0"
   }
 }
