--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint --dir src",
-		"test": "jest",
+		"test": "jest --passWithNoTests",
 		"prepare": "husky install",
 		"lint-staged": "lint-staged"
 	},
