--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@types/react-dom": "18.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.32.0",
 		"@typescript-eslint/parser": "^5.32.0",
+		"autoprefixer": "^10.4.13",
 		"eslint": "8.21.0",
 		"eslint-config-next": "12.2.3",
 		"eslint-plugin-jest": "^26.7.0",
@@ -38,8 +39,10 @@
 		"jest": "^28.1.3",
 		"jest-environment-jsdom": "^28.1.3",
 		"lint-staged": "^13.0.3",
+		"postcss": "^8.4.21",
 		"prettier": "^2.7.1",
 		"sass": "^1.54.0",
+		"tailwindcss": "^3.2.4",
 		"ts-jest": "^28.0.7",
 		"typescript": "^4.7.4"
 	},
