--- a/package.json
+++ b/package.json
@@ -12,39 +12,41 @@
 		"lint-staged": "lint-staged"
 	},
 	"dependencies": {
-		"framer-motion": "^6.5.1",
-		"next": "12.2.3",
+		"@next/font": "^13.1.1",
+		"framer-motion": "^8.4.1",
+		"next": "13.1.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
-		"@svgr/webpack": "^6.3.1",
-		"@testing-library/dom": "^8.16.0",
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/react": "^13.3.0",
-		"@testing-library/user-event": "^14.4.0",
-		"@types/jest": "^28.1.6",
-		"@types/node": "18.6.3",
-		"@types/react": "18.0.15",
-		"@types/react-dom": "18.0.6",
-		"@typescript-eslint/eslint-plugin": "^5.32.0",
-		"@typescript-eslint/parser": "^5.32.0",
+		"@svgr/webpack": "^6.5.1",
+		"@testing-library/dom": "^8.19.1",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^14.4.3",
+		"@types/jest": "^29.2.5",
+		"@types/node": "18.11.18",
+		"@types/react": "18.0.26",
+		"@types/react-dom": "18.0.10",
+		"@typescript-eslint/eslint-plugin": "^5.48.1",
+		"@typescript-eslint/parser": "^5.48.1",
 		"autoprefixer": "^10.4.13",
-		"eslint": "8.21.0",
-		"eslint-config-next": "12.2.3",
+		"eslint": "8.31.0",
+		"eslint-config-next": "13.1.1",
 		"eslint-plugin-jest": "^26.7.0",
-		"eslint-plugin-react": "^7.30.1",
-		"eslint-plugin-testing-library": "^5.6.0",
-		"husky": ">=6",
-		"jest": "^28.1.3",
-		"jest-environment-jsdom": "^28.1.3",
-		"lint-staged": "^13.0.3",
+		"eslint-plugin-react": "^7.32.0",
+		"eslint-plugin-testing-library": "^5.9.1",
+		"husky": ">=8.0.3",
+		"jest": "^29.3.1",
+		"jest-environment-jsdom": "^29.3.1",
+		"lint-staged": "^13.1.0",
 		"postcss": "^8.4.21",
-		"prettier": "^2.7.1",
-		"sass": "^1.54.0",
+		"prettier": "^2.8.2",
+		"prettier-plugin-tailwindcss": "^0.2.1",
+		"sass": "^1.57.1",
 		"tailwindcss": "^3.2.4",
-		"ts-jest": "^28.0.7",
-		"typescript": "^4.7.4"
+		"ts-jest": "^29.0.3",
+		"typescript": "^4.9.4"
 	},
 	"lint-staged": {
 		"*.(ts,tsx)": "eslint --cache --fix",
